# Campus-Inspection-Robot-Embedded-System

./: .gitignore  README.md  ROS工作补充记录.md  ROS接入说明.md  UBUNTU_DEPLOYMENT.md  pyproject.toml  工作记录.md
backend/: .gitignore  README.md  requirements.txt
backend/app/: __init__.py  db.py  main.py  models.py
backend/app/config/: settings.py
backend/app/routes/: __init__.py  auth.py  dependencies.py  devices.py  events.py  faces.py  health.py  inspection.py  maintenance.py  query.py  registry.py  tasks.py
backend/app/services/: __init__.py  image_detection.py  system.py
backend/tests/: test_event_image_analysis.py  test_image_detection.py
backend/tools/: detect_image_confidence.py
campus_inspection_embedded/: __init__.py  config.py  demo.py  detectors.py  interfaces.py  models.py  repository.py  ros_node.py  ros_support.py  runtime.py  services.py
config/: default_config.json  ros_config.json
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx  StatusBadge.tsx
frontend/src/config/: app.ts
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Dashboard.tsx  Devices.tsx  Events.tsx  Faces.tsx  Inspection.tsx  Login.tsx  Maintenance.tsx  Query.tsx  Tasks.tsx
frontend/src/routes/: appRoutes.tsx
frontend/src/styles/: index.css
ros_maps/: generate_ros_map.py
ros_maps/ros_maps/: campus_empty_5x7.pgm  campus_empty_5x7.yaml  patrol_waypoints.json  patrol_waypoints.yaml
tests/: test_ros_support.py  test_system.py
